--- a/oharaTree/src/app/books/book-search/book-search.component.html
+++ b/oharaTree/src/app/books/book-search/book-search.component.html
@@ -17,13 +17,16 @@
 
 <div *ngIf="isSubmmit">
 
-  <table class="tabla-libros">
-    <tr class="tabla-libros-cabezera">
-      <th>Titulo</th>
-      <th>Autor</th>
-    </tr>
+  <table class="table table-hover tabla-libros">
+    <thead>
+      <tr class="tabla-libros-cabezera">
+        <th>Titulo</th>
+        <th>Autor</th>
+      </tr>
+    </thead>
 
-    <tr *ngFor="let book of booksResponse.items; let i=index;">
+    <tbody>
+      <tr *ngFor="let book of booksResponse.items; let i=index;" (click)="onSelectBook(book)">
         <td>
           <span> 
             {{book.volumeInfo.title}} 
@@ -38,8 +41,9 @@
             {{book.volumeInfo.authors[0]}}
           </span>
         </td>
-    </tr> 
-    
+      </tr> 
+    </tbody>
+
   </table>
 
 </div>
